
New features:
A.F.I...S. [ZBXNEXT-4853,ZBXNEXT-517] added ability to send email messages in HTML format on demand (MVekslers, vasilijs)
..F.....S. [ZBXNEXT-1282,ZBXNEXT-4730] added changes to introduce regex based matching for auto-registration (vasilijs, viktors)

--------------------------------------------------------------------------------
Changes for 4.0.3rc1

New features:

Bug fixes:
..F....... [ZBX-15153] fixed custom interval validation; fixed parsing of custom intervals when user macros context contains forward slash (Ivo, miks)
..F....... [ZBX-15069] fixed community default value in edit scenario (talbergs)
.......PS. [ZBX-9038] fixed memory of performance counters consumed during vmware update (MVekslers)
....I....T [ZBX-8383] updated Tomcat template for compatibility with recent Tomcat versions (kalimulin)
A......... [ZBX-15078] fixed API authentication for ldap users having gui access disabled (gcalenko)
A.F....... [ZBX-14880] fixed misleading ldap authentication error messages (gcalenko)
..F....... [ZBX-14877] fixed style of disabled action on high contrast theme (Andzs, ashubin)
..F....... [ZBX-14606] removed strict-transport-security header from frontend (miks)
..F....... [ZBX-15020] fixed negative time selector offset when selecting time range in graph (miks)
A......... [ZBX-14977] fixed creation of unneeded database record if host prototype inventory mode is disabled; fixed validation for host and host prototype inventory mode (miks)
A......... [ZBX-15146] fixed SQL error occurred when too long IP address is attempted to be written in database (miks)
..F....... [ZBX-15148] fixed web scenario item selection in SVG graph widget (miks)
...G...... [ZBX-15107] fixed error handling in logrt[] items if regular expression for file name is not valid (Andris)
..F....... [ZBX-14800] fixed resolving of functional macros in graph widget name (Ivo)