@@ -31,6 +31,7 @@ Changes for 4.0.3rc1
 New features:
 
 Bug fixes:
+A.F....... [ZBX-14928] fixed "check now" being executed for active items and templates (talbergs)
 ..F....... [ZBX-15153] fixed custom interval validation; fixed parsing of custom intervals when user macros context contains forward slash (Ivo, miks)
 ..F....... [ZBX-15069] fixed community default value in edit scenario (talbergs)
 .......PS. [ZBX-9038] fixed memory of performance counters consumed during vmware update (MVekslers)
